[gd_scene load_steps=10 format=3 uid="uid://b6rtkj6kpm8fd"]

[ext_resource type="Texture2D" uid="uid://dg3o57hoy7eel" path="res://resources/ui/LIGHT/LIGHTbackground.png" id="1_d42bg"]
[ext_resource type="Script" uid="uid://bcxfi7hos02ou" path="res://scripts/CatPage.gd" id="1_sbb08"]
[ext_resource type="FontFile" uid="uid://bd5jlefpj0cvq" path="res://resources/ui/runescape_uf.ttf" id="2_exu3d"]
[ext_resource type="Texture2D" uid="uid://bjbah7ybu7snf" path="res://resources/ui/LIGHT/LIGHTarrow1.png" id="4_uy5bs"]
[ext_resource type="Script" uid="uid://dvxj426qemfm4" path="res://scripts/CloseUI.gd" id="5_8erm5"]
[ext_resource type="Texture2D" uid="uid://dynm253ec4jep" path="res://resources/ui/LIGHT/LIGHTarrow2.png" id="6_h3axc"]

[sub_resource type="LabelSettings" id="LabelSettings_sbb08"]
font = ExtResource("2_exu3d")
font_size = 26
font_color = Color(0.996078, 0.960784, 0.917647, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_gtprt"]
font = ExtResource("2_exu3d")
font_size = 40
font_color = Color(0.996078, 0.960784, 0.917647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5s11l"]
font = ExtResource("2_exu3d")
font_size = 20
font_color = Color(0.792157, 0.741176, 0.678431, 1)

[node name="CatPage" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(1200, 1000)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sbb08")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1200, 1000)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d42bg")
stretch_mode = 4

[node name="CatDisplay" type="Container" parent="Background"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 448.0
offset_bottom = 384.0

[node name="AppInfoContainer" type="ScrollContainer" parent="Background"]
layout_mode = 0
offset_left = 576.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 384.0

[node name="AppearanceInfo" type="VBoxContainer" parent="Background/AppInfoContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Age" type="Label" parent="Background/AppInfoContainer/AppearanceInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "# month old \"lifestage\""
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="Fur" type="Label" parent="Background/AppInfoContainer/AppearanceInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "\"fur_length\" \"base\" coat"
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="Eyes" type="Label" parent="Background/AppInfoContainer/AppearanceInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "\"eyes\" eyes"
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="PsychInfoContainer" type="ScrollContainer" parent="Background"]
layout_mode = 0
offset_left = 768.0
offset_top = 128.0
offset_right = 960.0
offset_bottom = 384.0

[node name="PsychologyInfo" type="VBoxContainer" parent="Background/PsychInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Gender" type="Label" parent="Background/PsychInfoContainer/PsychologyInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "of the \"gender\""
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="PrimaryRole" type="Label" parent="Background/PsychInfoContainer/PsychologyInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "1role"
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="SecondaryRoles" type="Label" parent="Background/PsychInfoContainer/PsychologyInfo"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "2role"
label_settings = SubResource("LabelSettings_sbb08")
autowrap_mode = 3

[node name="Modification Buttons" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 200.0
offset_top = 386.0
offset_right = 328.0
offset_bottom = 482.0

[node name="Name" type="Label" parent="Background"]
layout_mode = 2
offset_left = 8.0
offset_top = 32.0
offset_right = 1192.0
offset_bottom = 87.0
text = "Big Bobby Bones III"
label_settings = SubResource("LabelSettings_gtprt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ID" type="Label" parent="Background"]
layout_mode = 2
offset_left = 8.0
offset_top = 64.0
offset_right = 1192.0
offset_bottom = 119.0
text = "ID:-1"
label_settings = SubResource("LabelSettings_5s11l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 80.0
offset_bottom = 80.0
texture_normal = ExtResource("4_uy5bs")
stretch_mode = 0
script = ExtResource("5_8erm5")
idle_texture = ExtResource("4_uy5bs")
active_texture = ExtResource("6_h3axc")
